--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   @media(max-width:700px){ .plants-grid{grid-template-columns:1fr} }
   .progress{position:relative; height:8px; background:#eef2ff; border-radius:999px; overflow:hidden}
   .progress .bar{height:100%; background:#34d399}
+  /* windows toolbar */
+  #windows-toolbar{display:flex; align-items:center; gap:8px; margin-bottom:16px}
+  #windows-toolbar #window-label{flex:1; text-align:center; font-weight:600}
   /* window environment */
   .window{position:relative; border-radius:16px; overflow:hidden; box-shadow: inset 0 2px 6px rgba(0,0,0,.06); height:var(--win-h)}
   .sky{position:absolute; inset:0; background:linear-gradient(var(--sky1), var(--sky2)); z-index:0; transition: background .5s linear}
@@ -912,7 +915,7 @@
 
   function render(){
     const app = document.getElementById('app');
-    app.innerHTML = `<h1>Mind Garden <span class="tag">Prototype</span></h1>${statusBar()}${unlockNotice()}<div id="breathing-panel">${breathingCards()}</div>${garden()}${windowsill()}${settingsPanel()}${footerNote()}`;
+    app.innerHTML = `<h1>Mind Garden <span class="tag">Prototype</span></h1>${statusBar()}${unlockNotice()}<div id="breathing-panel">${breathingCards()}</div><div id="windows-toolbar"><button id="window-prev" class="btn secondary">‹</button><div id="window-label">Window 1/1</div><button id="window-next" class="btn secondary">›</button><button id="window-add" class="btn secondary" disabled>+ Window</button></div><div id="windows-view"></div>${garden()}${windowsill()}${settingsPanel()}${footerNote()}`;
     bind(); positionAstronomy();
   }
 
@@ -936,5 +939,6 @@
   initLocationAstronomy();
   render();
 })();</script>
+<script type="module" src="./windows.js"></script>
 </body>
 </html>
